<resources>
    <string name="app_name">FinalProject4</string>
    <string name="detail_tab">Detail Movie</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="FORMAT_YYY_MM_DD">yyyy-MM-dd</string>
    <string name="FORMAT_DAY_DD_MM_YYYY">EEEE, dd MMM yyyy</string>
    <string name="action_settings">Settings</string>
    <string name="movie_date">release_date</string>
    <string name="movie_name">title</string>
    <string name="movie_description">overview</string>
    <string name="deskripsi">Overview</string>
    <string name="vote_average">vote_average</string>
    <string name="vote_count">vote_count</string>
    <string name="tanggal">release date</string>
    <string name="judul_film">Title</string>
    <string name="overview">overview</string>
    <string name="detail">Detail</string>
    <string name="share">Share</string>
    <string name="search">Enter Keyword</string>
    <string name="dialog_exit">Are you sure to exit this application?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="detail_movies">Detail Movie</string>
    <string name="SUBJEK">Subyek</string>
    <string name="SHARE_VIA">Share</string>
    <string name="exit">Exit</string>
    <string name="name_fragment_now_playing">NOW PLAYING</string>
    <string name="name_fragment_up_coming">UPCOMING</string>
    <string name="nav_search">SEARCH</string>
    <string name="favorit">FAVORITE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_judul">Titlr</string>
    <string name="release">Release Date</string>
    <string name="release_date">2 Juni 2019</string>
    <string name="popularity">Popularity</string>
    <string name="Tittle_loading">Loading</string>
    <string name="Message_loading">Wait a moment</string>
    <string name="language">Original Language</string>
    <string name="lang">English</string>

    <string name="dialog_message_add">Do you want to add this movie to your favorites?</string>
    <string name="dialog_title_add">Add to Favourites</string>
    <string name="dialog_message_remove">Do you want to remove this movie from favorites?</string>
    <string name="dialog_title_remove">Remove from favorites</string>
    <string name="toast_add">Yes</string>
    <string name="toast_remove">Removed Favorite</string>
    <string name="no_favourite">There\'s no favorite movie</string>
    <string name="Share">Share</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="dailynotif">Daily Reminder Notification</string>
    <string name="set_check">Reminder has been created</string>
    <string name="message_pas">Please Comeback, We are missing you</string>
    <string name="waktu">Time</string>
    <string name="setting">SETTING</string>
    <string name="set_waktu">Set your time</string>
    <string name="now_play">Now Playing Reminder</string>
    <string name="err_load_failed">Error</string>

</resources>
